--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -46,6 +48,16 @@ android {
 
 dependencies {
 
+//        classpath'com.google.dagger:hilt-android-gradle-plugin:2.42'
+
+    implementation'com.google.dagger:hilt-android:2.40'
+    kapt'com.google.dagger:hilt-android-compiler:2.40'
+    implementation'com.google.dagger:dagger-android:2.35.1'
+    implementation'com.google.dagger:dagger-android support:2.20¹' // if you use the support libraries
+    kapt'com.google.dagger:dagger-android-processor:2.20¹'
+    kapt'com.google.dagger:dagger-compiler:2.20¹'
+
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
@@ -64,8 +76,8 @@ dependencies {
     //koin
 //    implementation "org.koin:koin-android-viewmodel:2.1.6"
 //    implementation "org.koin:koin-android:2.1.6"
-
-    implementation "io.insert-koin:koin-android:3.2.0"
+//
+//    implementation "io.insert-koin:koin-android:3.2.0"
 
 
     // Networking
